fix issue where home screen was darkening on tap; reduce size of work animation and reposition camera--was not loading on mobile

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,3 +1,8 @@
+div {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
+  }
+
 #home-container {
     height: 100vh;
     width: auto;
